objects/TM_ProductProfitstarsAccountAccess__c.object
<CustomObject>
    <fields>
        <fullName>TM_Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Treasury_Application_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Application Product</label>
        <referenceTo>TM_Treasury_Application_Product__c</referenceTo>
        <relationshipLabel>Profitstars Account Access</relationshipLabel>
        <relationshipName>Profitstars_Account_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Profitstars Account Access</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Profitstars Account Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profitstars Account Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TM_This_Profitstars_cant_be_edited</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name == &apos;Treasury Sales Officer&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Review&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Data Input&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Underwriting&apos;</errorConditionFormula>
        <errorMessage>This Profitstars Account Access can’t be edited anymore as it’s at/after Signature Required stage.</errorMessage>
    </validationRules>
</CustomObject>